--- a/views/wrong_login.html
+++ b/views/wrong_login.html
@@ -51,10 +51,10 @@
 
   <center>
     <div style="margin-top: 300px">
-      <button id ="b1"  onclick="document.getElementById('b1').style.display='none'" id="b1" style="margin-bottom: 25px">Prijava </button>
+      <button id ="b1"  onclick="document.getElementById('b1').style.display='none'" id="b1" style="margin-bottom: 25px">Napačno geslo </button>
       <form  method="post" action="/moji_skakalci/">
-        <input id="i1" style="display: none;" placeholder="Uporabniško ime" type="text" name="ime" value="" required /> <br>
-        <input id="i2" style="display: none;" type="password" placeholder="Geslo" name="geslo" value="" required/> <br>
+        <input id="i1" style="display: none;" placeholder="Uporabniško ime" type="text" name="ime" value="" /> <br>
+        <input id="i2" style="display: none;" type="password" placeholder="Geslo" name="geslo" value="" /> <br>
         <input id="i3" style="display: none;" type="submit" value="Prijavi se">
       </form>
 
