--- a/views/odstrani_tekmovalca.html
+++ b/views/odstrani_tekmovalca.html
@@ -10,21 +10,9 @@
     body{
       background-color: #e6f7ff
     }
-    input {
-      background-color: white;
-      background-position: 10px 10px; 
-      background-repeat: no-repeat;
-      margin-bottom: 10px;
-      padding-left: 25px;
-      padding-right: 25px;
-      padding-top: 8px;
-      padding-bottom: 8px;
-      border: 3px solid lightblue;
-      text-align: center;
-      cursor: pointer;
-    }
+    
 
-    button {
+    input {
       background-color: #e6f5ff;
       color:  #000033;
       padding: 50px 100px;
@@ -36,7 +24,7 @@
       border-color: lightblue;
 
     }
-    button:hover {
+    input:hover {
       background-color: white;
       cursor: pointer;
     }
@@ -51,11 +39,12 @@
 
   <center>
     <div style="margin-top: 300px">
-      <button id ="b1"  onclick="document.getElementById('b1').style.display='none'" id="b1" style="margin-bottom: 25px">Prijava </button>
-      <form  method="post" action="/moji_skakalci/">
-        <input id="i1" style="display: none;" placeholder="Uporabniško ime" type="text" name="ime" value="" required /> <br>
-        <input id="i2" style="display: none;" type="password" placeholder="Geslo" name="geslo" value="" required/> <br>
-        <input id="i3" style="display: none;" type="submit" value="Prijavi se">
+        %for (ime_uporabnika, geslo_uporabnika) in sezIme:  
+		  <form method="post" action="/moji_skakalci/">
+		  <input type="submit" name = "nazaj" value="Tekmovalec je bil odstranjen">
+			<input type="hidden" name="ime" value="{{ime_uporabnika}}">
+			<input type="hidden" name="geslo" value="{{geslo_uporabnika}}">	
+		%end
       </form>
 
     </div>
